class IBookController {
    constructor() { }
    show() { }
    list() { }
    store() { }
    update() { }
    remove() { }
}

module.exports = IBookController