class IImageController {
    constructor() { }
    show() { }
    list() { }
    store() { }
    update() { }
    remove() { }
}

module.exports = IImageController