class ILoanController {
    constructor() { }
    show() { }
    list() { }
    store() { }
    update() { }
    remove() { }
}

module.exports = ILoanController;