class IBookDAO {
  constructor() { }
  index() { }
  list() { }
  create() { }
  update() { }
  delete() { }
}

module.exports = IBookDAO;