class IImageDAO {
  constructor() { }
  index() { }
  list() { }
  create() { }
  update() { }
  delete() { }
}

module.exports = IImageDAO