class ILoanDAO {
  constructor() { }
  index() { }
  list() { }
  create() { }
  update() { }
  delete() { }
}

module.exports = ILoanDAO