class IUserDAO {
  constructor() { }
  login() { }
  index() { }
  list() { }
  create() { }
  update() { }
  delete() { }
}

module.exports = IUserDAO